GNOME Bugzilla – Bug 684814
Fix GnomeRRLabeler drawing artifacts
Last modified: 2012-09-26 16:44:52 UTC
GnomeRRLabeler has a few drawing glitches: - a gray area appears below rounded corners - a small gray glitch can be observed between the stroke and the fill While I'm at it, make it so this also works in non-composited mode
Created attachment 225174 [details] [review] rr-labeler: clear surface before drawing frame and background To avoid gray areas extending below the edges.
Created attachment 225175 [details] [review] rr-labeler: use a shape region if the widget is not composited Stolen pretty much as-is from the identical code in GtkTooltip. This ensures the labels always stay round and with no artifacts below the corners even in non-composited environments.
Created attachment 225176 [details] [review] rr-labeler: scale the corner radii when drawing the fill We need to scale down the corner radii of the fill when drawing it on top of the frame, or its corners will not perfectly match those of the stroke, leaving some unpleasant transparent artifacts around the corners.
Go for it!
(In reply to comment #4) > Go for it! Does this mean "accepted-commit_now"? :)
Attachment 225174 [details] pushed as 41a1074 - rr-labeler: clear surface before drawing frame and background Attachment 225175 [details] pushed as f92b50c - rr-labeler: use a shape region if the widget is not composited Attachment 225176 [details] pushed as 5edcac4 - rr-labeler: scale the corner radii when drawing the fill Pushed to master, thanks.