rr-labeler: clear surface before drawing frame and background

To avoid gray areas extending below the edges.

https://bugzilla.gnome.org/show_bug.cgi?id=684814